# OOP_mai

./: README.md
dz_1/: CMakeLists.txt  README2.md  dont_look.txt  main.cpp  tests1.cpp
